# voxel-game

./: .env  .gitignore  Cargo.toml  chunks.sqlite-journal
src/: block.rs  block_registry.rs  chunk.rs  chunk_builder.rs  config.rs  create_chunk.rs  level.rs  level_gen.rs  main.rs  model.rs  overlay.rs  player.rs  position.rs  registry.rs
src/block/: dirt.rs
src/level/: adjacent_sides.rs  chunk.rs  chunk_builder.rs  chunk_data.rs  chunk_generator.rs  chunk_loader.rs  chunk_mesher.rs  level_gen.rs  mesh_builder.rs  visible_chunks.rs
src/model/: cube.rs
