[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
async-io = "2.0.0"
bevy = { version = "0.11.3", features = ["trace"] }
bevy-fps-counter = "0.2.0"
bevy_rapier3d = "0.22.0"
derive_more = "0.99.17"
futures-lite = "1.13.0"
noise = "0.8.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
