[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
async-io = "2.0.0"
bevy = { version = "0.11.3", features = ["trace", "serialize"] }
bevy-fps-counter = "0.2.0"
bevy_rapier3d = "0.22.0"
derive_more = "0.99.17"
futures = "0.3.29"
futures-lite = "1.13.0"
indexmap = "2.0.2"
itertools = "0.11.0"
noise = "0.8.2"
parking_lot = "0.12.1"
ron = "0.8.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.190", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
